k8s/meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: mplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.11
          ports:
            - containerPort: 7700
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: mplace
spec:
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
